<resources>
    <string name="app_name">Counting Money</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="expenses">Expenses</string>
    <string name="income">Income</string>
    <string name="note">Note</string>
    <string name="date">Date</string>
    <string name="title">Title</string>
    <string name="amount">Amount</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="edit">Edit</string>
    <string name="transaction_type_detail">Transaction type</string>
    <string name="category">Category</string>
    <string name="when">When</string>
    <string-array name="transaction_type">
        <item>Expenses</item>
        <item>Income</item>
    </string-array>
    <string-array name="categories">
        <item>Entertaiment</item>
        <item>Transportation</item>
        <item>Cafe</item>
        <item>Groceries</item>
        <item>Workout</item>
        <item>Investments</item>
        <item>Other</item>
    </string-array>
</resources>